[package]
name = "lapack-sys"
version = "0.11.7"
license = "Apache-2.0/MIT"
authors = [
    "Andrew Straw <strawman@astraw.com>",
    "Corey Richardson <corey@octayn.net>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
]
description = "The package provides bindings to the Linear Algebra PACKage."
documentation = "https://docs.rs/lapack-sys"
homepage = "https://github.com/stainless-steel/lapack-sys"
repository = "https://github.com/stainless-steel/lapack-sys"
readme = "README.md"
categories = ["external-ffi-bindings", "science"]
keywords = ["linear-algebra"]

[features]
default = ["openblas"]

accelerate = ["accelerate-src"]
netlib = ["netlib-src"]
openblas = ["openblas-src"]
lapacke_static = ["lapacke-static"]

[dependencies]
libc = "0.2"

[dependencies.accelerate-src]
version = "0.3"
optional = true

[dependencies.netlib-src]
version = "0.7"
optional = true

[dependencies.openblas-src]
version = "0.5"
optional = true

[dependencies.lapacke-static]
version = "0.1"
optional = true
