[package]
name = "lapack-sys"
version = "0.12.1"
license = "Apache-2.0/MIT"
authors = [
    "Andrew Straw <strawman@astraw.com>",
    "Corey Richardson <corey@octayn.net>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
]
description = "The package provides bindings to LAPACK (Fortran)."
documentation = "https://docs.rs/lapack-sys"
homepage = "https://github.com/blas-lapack-rs/lapack-sys"
repository = "https://github.com/blas-lapack-rs/lapack-sys"
readme = "README.md"
categories = ["external-ffi-bindings", "science"]
keywords = ["linear-algebra"]

[dependencies]
libc = "0.2"
